5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1861_3211.log
== TEST (2019-06-26 18:08:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5])

calorias = array(eval(input("Calorias: ")))

gasto = dot(inv(matriz, calorias))

print(gastos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:09:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gasto = dot(inv(matriz, calorias))

print(gastos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:09:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gasto = dot(inv(matriz), calorias)

print(gastos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:09:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos dot(inv(matriz), calorias)

print(gastos)

-- ERROR:
File "XXXX", line 11
    gastos dot(inv(matriz), calorias)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:10:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

print(gastos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:10:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

print(around(gastos, 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:11:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

print("caminhada:", round(gastos[0], 0))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:15:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

for i in range(size(gastos)):
	if gastos[i] == max(gastos)
		im = i
if im == 0:
	a = 'caminhada'
elif im == 1:
	a = 'corrida'
elif im == 2:
	a = 'bicicleta'
elif im == 3:
	a = 'natação'
	
print("caminhada:", round(gastos[0], 0))
print("corrida", round(gastos[1], 0))
print("bicicleta", round(gastos[2], 0))
print("natação", round(gastos[3], 0))
print(a)

-- ERROR:
File "XXXX", line 14
    if gastos[i] == max(gastos)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:15:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

for i in range(size(gastos)):
	if gastos[i] == max(gastos):
		im = i
if im == 0:
	a = 'caminhada'
elif im == 1:
	a = 'corrida'
elif im == 2:
	a = 'bicicleta'
elif im == 3:
	a = 'natação'
	
print("caminhada:", round(gastos[0], 0))
print("corrida", round(gastos[1], 0))
print("bicicleta", round(gastos[2], 0))
print("natação", round(gastos[3], 0))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:16:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

for i in range(size(gastos)):
	if gastos[i] == max(gastos):
		im = i
if im == 0:
	a = 'caminhada'
elif im == 1:
	a = 'corrida'
elif im == 2:
	a = 'bicicleta'
elif im == 3:
	a = 'nataçao'
	
print("caminhada:", round(gastos[0], 0))
print("corrida", round(gastos[1], 0))
print("bicicleta", round(gastos[2], 0))
print("nataçao", round(gastos[3], 0))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:16:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

for i in range(size(gastos)):
	if gastos[i] == max(gastos):
		im = i
if im == 0:
	a = 'caminhada'
elif im == 1:
	a = 'corrida'
elif im == 2:
	a = 'bicicleta'
elif im == 3:
	a = 'natacao'
	
print("caminhada:", round(gastos[0], 0))
print("corrida", round(gastos[1], 0))
print("bicicleta", round(gastos[2], 0))
print("natacao", round(gastos[3], 0))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:16:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

for i in range(size(gastos)):
	if gastos[i] == max(gastos):
		im = i
if im == 0:
	a = 'caminhada'
elif im == 1:
	a = 'corrida'
elif im == 2:
	a = 'bicicleta'
elif im == 3:
	a = 'natacao'
	
print("caminhada:", round(gastos[0], 0))
print("corrida", round(gastos[1], 0))
print("bicicleta", round(gastos[2], 0))
print("natacao", round(gastos[3], 0))
print(a)

-- EXECUTION TIME:
1.21356
-- TEST CASE 1:
---- input:
[6407.0,4872.0,10619.0,8319.5]
---- correct output:
caminhada: 164.0
corrida: 207.0
bicicleta: 3198.0
natacao: 2820.0
bicicleta
---- user output:
caminhada: 164.0
corrida 207.0
bicicleta 3198.0
natacao 2820.0
bicicleta
-- TEST CASE 2:
---- input:
[6248.0,7068.0,8351.0,13344.5]
---- correct output:
caminhada: 3050.0
corrida: 195.0
bicicleta: 2556.0
natacao: 1020.0
caminhada
---- user output:
caminhada: 3050.0
corrida 195.0
bicicleta 2556.0
natacao 1020.0
caminhada
-- TEST CASE 3:
---- input:
[9902.0,6825.5,15785.0,5539.0]
---- correct output:
caminhada: 195.0
corrida: 325.0
bicicleta: 1020.0
natacao: 5698.0
natacao
---- user output:
caminhada: 195.0
corrida 325.0
bicicleta 1020.0
natacao 5698.0
natacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:17:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

for i in range(size(gastos)):
	if gastos[i] == max(gastos):
		im = i
if im == 0:
	a = 'caminhada'
elif im == 1:
	a = 'corrida'
elif im == 2:
	a = 'bicicleta'
elif im == 3:
	a = 'natacao'
	
print("caminhada:", round(gastos[0], 0))
print("corrida", round(gastos[1], 0))
print("bicicleta", round(gastos[2], 0))
print("natacao", round(gastos[3], 0))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:17:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

for i in range(size(gastos)):
	if gastos[i] == max(gastos):
		im = i
if im == 0:
	a = 'caminhada'
elif im == 1:
	a = 'corrida'
elif im == 2:
	a = 'bicicleta'
elif im == 3:
	a = 'natacao'
	
print("caminhada:", round(gastos[0], 0))
print("corrida:", round(gastos[1], 0))
print("bicicleta:", round(gastos[2], 0))
print("natacao:", round(gastos[3], 0))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:17:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array([[1, 2, 0.5, 1.5],
					[1.5, 1, 0.5, 1],
					[1, 1, 1, 2.5],
					[2.5, 0.5, 2, 0.5]])

calorias = array(eval(input("Calorias: ")))

gastos = dot(inv(matriz), calorias)

for i in range(size(gastos)):
	if gastos[i] == max(gastos):
		im = i
if im == 0:
	a = 'caminhada'
elif im == 1:
	a = 'corrida'
elif im == 2:
	a = 'bicicleta'
elif im == 3:
	a = 'natacao'
	
print("caminhada:", round(gastos[0], 0))
print("corrida:", round(gastos[1], 0))
print("bicicleta:", round(gastos[2], 0))
print("natacao:", round(gastos[3], 0))
print(a)

-- EXECUTION TIME:
1.20781
-- TEST CASE 1:
---- input:
[6407.0,4872.0,10619.0,8319.5]
---- correct output:
caminhada: 164.0
corrida: 207.0
bicicleta: 3198.0
natacao: 2820.0
bicicleta
---- user output:
caminhada: 164.0
corrida: 207.0
bicicleta: 3198.0
natacao: 2820.0
bicicleta
-- TEST CASE 2:
---- input:
[6248.0,7068.0,8351.0,13344.5]
---- correct output:
caminhada: 3050.0
corrida: 195.0
bicicleta: 2556.0
natacao: 1020.0
caminhada
---- user output:
caminhada: 3050.0
corrida: 195.0
bicicleta: 2556.0
natacao: 1020.0
caminhada
-- TEST CASE 3:
---- input:
[9902.0,6825.5,15785.0,5539.0]
---- correct output:
caminhada: 195.0
corrida: 325.0
bicicleta: 1020.0
natacao: 5698.0
natacao
---- user output:
caminhada: 195.0
corrida: 325.0
bicicleta: 1020.0
natacao: 5698.0
natacao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
